[package]
name = "tu-result"
version = "0.1.0"
authors = ["Cloud Cao <tutucloud@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for Result"
repository = "https://github.com/tutucloud/tu-result-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
